// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WeatherStatus /> should be rendered 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 8;
  -ms-flex: 8;
  flex: 8;
  width: 100%;
  height: auto;
}

.c1 {
  display: grid;
  grid-template-columns: 4fr 3fr;
  grid-template-rows: 3fr 1fr 1fr;
  width: 100%;
  height: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  opacity: 85%;
  height: 100%;
  background: #6497b1;
  padding: 0 5px 0 5px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  background: #005b96;
  opacity: 93%;
  padding: 0 5px 0 5px;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  background: #011f4b;
  padding: 0 5px 0 5px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
  background: #6497b1;
  opacity: 85%;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
  background: #005b96;
  opacity: 93%;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
  background: #011f4b;
  opacity: 1;
}

.c4 {
  cursor: auto;
  color: #fff;
  font-size: 1.8rem;
  font-weight: 400;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;
  padding: 8px 0 3px 0;
}

.c5 {
  cursor: pointer;
  color: #fff;
  font-size: 1.8rem;
  font-weight: 400;
  font-family: 'Open Sans';
  padding: 0;
}

.c6 {
  cursor: auto;
  color: #fff;
  font-size: 2rem;
  font-weight: 400;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;
  padding: 16px 0 10px 0;
}

.c7 {
  cursor: auto;
  color: #fff;
  font-size: 1.4rem;
  font-weight: 400;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;
  padding: 0;
}

.c10 {
  cursor: auto;
  color: #fff;
  font-size: 1.5rem;
  font-weight: 400;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;
  padding: 8px 0 3px 0;
}

.c11 {
  cursor: auto;
  color: #fff;
  font-size: 1.5rem;
  font-weight: 400;
  font-family: 'Open Sans';
  padding: 0;
}

@media screen and (max-width:768px) {
  .c3 p:first-child {
    padding: 0;
  }
}

@media screen and (max-width:425px) {
  .c9 p {
    font-size: 18px;
  }
}

@media screen and (max-width:425px) {
  .c13 p {
    font-size: 18px;
  }
}

@media screen and (max-width:768px) {
  .c4 {
    font-size: 1.5rem;
    font-weight: 400;
  }
}

@media screen and (max-width:768px) {
  .c5 {
    font-size: 1.5rem;
    font-weight: 400;
  }
}

@media screen and (max-width:768px) {
  .c6 {
    font-size: 1.8rem;
    font-weight: 400;
  }
}

@media screen and (max-width:768px) {
  .c7 {
    font-size: 1.2rem;
    font-weight: 400;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
      data-testid="weather-icon"
      opacity="85%"
    >
      <svg
        color="#fff"
        fill="currentColor"
        height="80%"
        stroke="currentColor"
        stroke-width="0"
        style="color: rgb(255, 255, 255);"
        viewBox="0 0 16 16"
        width="80%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4.158 12.025a.5.5 0 0 1 .316.633l-.5 1.5a.5.5 0 0 1-.948-.316l.5-1.5a.5.5 0 0 1 .632-.317zm3 0a.5.5 0 0 1 .316.633l-1 3a.5.5 0 0 1-.948-.316l1-3a.5.5 0 0 1 .632-.317zm3 0a.5.5 0 0 1 .316.633l-.5 1.5a.5.5 0 0 1-.948-.316l.5-1.5a.5.5 0 0 1 .632-.317zm3 0a.5.5 0 0 1 .316.633l-1 3a.5.5 0 1 1-.948-.316l1-3a.5.5 0 0 1 .632-.317zm.247-6.998a5.001 5.001 0 0 0-9.499-1.004A3.5 3.5 0 1 0 3.5 11H13a3 3 0 0 0 .405-5.973zM8.5 2a4 4 0 0 1 3.976 3.555.5.5 0 0 0 .5.445H13a2 2 0 0 1 0 4H3.5a2.5 2.5 0 1 1 .605-4.926.5.5 0 0 0 .596-.329A4.002 4.002 0 0 1 8.5 2z"
        />
      </svg>
    </div>
    <div
      class="c3"
      data-testid="today-weather"
    >
      <p
        class="c4"
        font-size="1.8rem"
      >
        HOJE
      </p>
      <p
        class="c5"
        cursor="pointer"
        data-testid="temperature"
        font-family="'Open Sans'"
        font-size="1.8rem"
      >
        12ºC
      </p>
      <p
        class="c6"
        font-size="2rem"
      >
        Chuva forte
      </p>
      <p
        class="c7"
        data-testid="wind"
        font-size="1.4rem"
      >
        Vento: 
        S 3.13Km/h
      </p>
      <p
        class="c7"
        data-testid="humidity"
        font-size="1.4rem"
      >
        Humidade: 
        77
        %
      </p>
      <p
        class="c7"
        data-testid="pressure"
        font-size="1.4rem"
      >
        Pressão: 
        1019
        hPA
      </p>
    </div>
    <div
      class="c8"
      opacity="93%"
    />
    <div
      class="c9"
      data-testid="tomorrow-weather"
    >
      <p
        class="c10"
        font-size="1.5rem"
      >
        AMANHÃ
      </p>
      <p
        class="c11"
        font-family="'Open Sans'"
        font-size="1.5rem"
      >
        30ºC
      </p>
    </div>
    <div
      class="c12"
    />
    <div
      class="c13"
      data-testid="aftertomorrow-weather"
    >
      <p
        class="c10"
        font-size="1.5rem"
      >
        DEPOIS DE AMANHÃ
      </p>
      <p
        class="c11"
        font-family="'Open Sans'"
        font-size="1.5rem"
      >
        35ºC
      </p>
    </div>
  </div>
</div>
`;

exports[`<WeatherStatus /> should be rendered without props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 8;
  -ms-flex: 8;
  flex: 8;
  width: 100%;
  height: auto;
}

.c1 {
  display: grid;
  grid-template-columns: 4fr 3fr;
  grid-template-rows: 3fr 1fr 1fr;
  width: 100%;
  height: 100%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  opacity: 85%;
  height: 100%;
  background: #606060;
  padding: 0 5px 0 5px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  background: #3D3D3D;
  opacity: 93%;
  padding: 0 5px 0 5px;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  background: #262626;
  padding: 0 5px 0 5px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
  background: #606060;
  opacity: 85%;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
  background: #3D3D3D;
  opacity: 93%;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
  background: #262626;
  opacity: 1;
}

.c4 {
  cursor: auto;
  color: #fff;
  font-size: 1.8rem;
  font-weight: 400;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;
  padding: 8px 0 3px 0;
}

.c5 {
  cursor: pointer;
  color: #fff;
  font-size: 1.8rem;
  font-weight: 400;
  font-family: 'Open Sans';
  padding: 0;
}

.c6 {
  cursor: auto;
  color: #fff;
  font-size: 2rem;
  font-weight: 400;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;
  padding: 16px 0 10px 0;
}

.c7 {
  cursor: auto;
  color: #fff;
  font-size: 1.4rem;
  font-weight: 400;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;
  padding: 0;
}

.c10 {
  cursor: auto;
  color: #fff;
  font-size: 1.5rem;
  font-weight: 400;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;
  padding: 8px 0 3px 0;
}

.c11 {
  cursor: auto;
  color: #fff;
  font-size: 1.5rem;
  font-weight: 400;
  font-family: 'Open Sans';
  padding: 0;
}

@media screen and (max-width:768px) {
  .c3 p:first-child {
    padding: 0;
  }
}

@media screen and (max-width:425px) {
  .c9 p {
    font-size: 18px;
  }
}

@media screen and (max-width:425px) {
  .c13 p {
    font-size: 18px;
  }
}

@media screen and (max-width:768px) {
  .c4 {
    font-size: 1.5rem;
    font-weight: 400;
  }
}

@media screen and (max-width:768px) {
  .c5 {
    font-size: 1.5rem;
    font-weight: 400;
  }
}

@media screen and (max-width:768px) {
  .c6 {
    font-size: 1.8rem;
    font-weight: 400;
  }
}

@media screen and (max-width:768px) {
  .c7 {
    font-size: 1.2rem;
    font-weight: 400;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
      data-testid="weather-icon"
      opacity="85%"
    />
    <div
      class="c3"
      data-testid="today-weather"
    >
      <p
        class="c4"
        font-size="1.8rem"
      >
        HOJE
      </p>
      <p
        class="c5"
        cursor="pointer"
        data-testid="temperature"
        font-family="'Open Sans'"
        font-size="1.8rem"
      >
        0ºC
      </p>
      <p
        class="c6"
        font-size="2rem"
      />
      <p
        class="c7"
        data-testid="wind"
        font-size="1.4rem"
      >
        Vento: 
        
      </p>
      <p
        class="c7"
        data-testid="humidity"
        font-size="1.4rem"
      >
        Humidade: 
        %
      </p>
      <p
        class="c7"
        data-testid="pressure"
        font-size="1.4rem"
      >
        Pressão: 
        hPA
      </p>
    </div>
    <div
      class="c8"
      opacity="93%"
    />
    <div
      class="c9"
      data-testid="tomorrow-weather"
    >
      <p
        class="c10"
        font-size="1.5rem"
      >
        AMANHÃ
      </p>
      <p
        class="c11"
        font-family="'Open Sans'"
        font-size="1.5rem"
      >
        0ºC
      </p>
    </div>
    <div
      class="c12"
    />
    <div
      class="c13"
      data-testid="aftertomorrow-weather"
    >
      <p
        class="c10"
        font-size="1.5rem"
      >
        DEPOIS DE AMANHÃ
      </p>
      <p
        class="c11"
        font-family="'Open Sans'"
        font-size="1.5rem"
      >
        0ºC
      </p>
    </div>
  </div>
</div>
`;
